@@ -1,3 +1,4 @@
+2016-03-04 Fixed zoom in IWB Toolbar module
 2016-03-04 Added setting last page as separated page in Navigation Bar module
 2016-03-03 Fixed memory leaks in Audio module
 2016-03-03 Fixed memory leaks in TextAudio module
